Cambios en el codigo y validaciones de telefono

--- a/src/views/editLegalInsured.ejs
+++ b/src/views/editLegalInsured.ejs
@@ -56,7 +56,7 @@
                                     <div class="form-group row"><label class="col-sm-3 col-form-label">Teléfono Fijo</label>
                                         <div class="col-sm-9">
                                             <input 
-                                                type="text"
+                                                type="tel"
                                                 name="telefono_asegurado_per_jur"
                                                 id="telefono_asegurado_per_jur" 
                                                 value="<%= legalInsured.telefono_asegurado_per_jur %>" 
@@ -69,7 +69,7 @@
                                     <div class="form-group row"><label class="col-sm-3 col-form-label">Teléfono Opcional</label>
                                         <div class="col-sm-9">
                                             <input 
-                                                type="text"
+                                                type="tel"
                                                 name="telefono_opcional_per_jur"
                                                 id="telefono_opcional_per_jur" 
                                                 value="<%= legalInsured.telefono_opcional_per_jur %>" 
@@ -98,7 +98,7 @@
                                     <div class="form-group row"><label class="col-sm-3 col-form-label">Celular</label>
                                         <div class="col-sm-9">
                                             <input 
-                                                type="text"
+                                                type="tel"
                                                 name="celular_asegurado_per_jur"
                                                 id="celular_asegurado_per_jur" 
                                                 value="<%= legalInsured.celular_asegurado_per_jur %>" 
