--- a/src/views/executiveForm.ejs
+++ b/src/views/executiveForm.ejs
@@ -75,7 +75,7 @@
                                     <div class="form-group row"><label class="col-sm-2 col-form-label">Celular</label>
                                         <div class="col-sm-10">
                                             <input 
-                                                type="text"
+                                                type="tel"
                                                 name="celular_ejecutivo"
                                                 id="celular_ejecutivo" 
                                                 placeholder="Celular de Ejecutivo *" 
@@ -103,7 +103,7 @@
                                             <textarea 
                                                 name="direccion_ejecutivo"
                                                 id="direccion_ejecutivo" 
-                                                placeholder="Dirección de Agente Propio *" 
+                                                placeholder="Dirección de Ejecutivo *" 
                                                 class="form-control"
                                                 required
                                             ></textarea>
