--- a/src/views/layouts/footer.ejs
+++ b/src/views/layouts/footer.ejs
@@ -59,6 +59,19 @@
 
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
+    <!-- Validacion de numero de Telefono -->
+
+    <script src="/js/phone-validations/insurer.js"></script>
+    <script src="/js/phone-validations/own-agent.js"></script>
+    <script src="/js/phone-validations/executive.js"></script>
+    <script src="/js/phone-validations/natural-insured-phone.js"></script>
+    <script src="/js/phone-validations/natural-insured-mobile.js"></script>
+    <script src="/js/phone-validations/natural-insured-emergency.js"></script>
+    <script src="/js/phone-validations/legal-insured-phone.js"></script>
+    <script src="/js/phone-validations/legal-insured-optional.js"></script>
+    <script src="/js/phone-validations/legal-insured-mobile.js"></script>
+    <script src="/js/phone-validations/user.js"></script>
+
     <% if(typeof alert != 'undefined') { %>
         <script>
             Swal.fire({
