--- a/src/views/naturalInsuredForm.ejs
+++ b/src/views/naturalInsuredForm.ejs
@@ -69,7 +69,7 @@
                                     <div class="form-group row"><label class="col-sm-2 col-form-label">Telefono</label>
                                         <div class="col-sm-10">
                                             <input 
-                                                type="text"
+                                                type="tel"
                                                 name="telefono_asegurado_per_nat"
                                                 id="telefono_asegurado_per_nat" 
                                                 placeholder="Telefono Fijo" 
@@ -77,13 +77,7 @@
                                             >
                                         </div>
                                     </div>
-                                    </br>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-6">
-                            <div class="ibox">
-                                <div class="form-control">
+                                    <div class="hr-line-dashed"></div>
                                     <div class="form-group row"><label class="col-sm-2 col-form-label">Email</label>
                                         <div class="col-sm-10">
                                             <input 
@@ -96,14 +90,46 @@
                                             >
                                         </div>
                                     </div>
-                                    <div class="hr-line-dashed"></div>
+                                    </br>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="ibox">
+                                <div class="form-control">
                                     <div class="form-group row"><label class="col-sm-2 col-form-label">Celular</label>
                                         <div class="col-sm-10">
                                             <input 
+                                                type="tel"
+                                                name="celular_per_nat"
+                                                id="celular_per_nat" 
+                                                placeholder="Celular *" 
+                                                class="form-control"
+                                                required
+                                            >
+                                        </div>
+                                    </div>
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-2 col-form-label">Nombre</label>
+                                        <div class="col-sm-10">
+                                            <input 
                                                 type="text"
-                                                name="celular_emergencia_per_nat"
-                                                id="celular_emergencia_per_nat" 
-                                                placeholder="Celular de Emergencia *" 
+                                                name="nombre_emergencia_per_nat"
+                                                id="nombre_emergencia_per_nat" 
+                                                placeholder="Nombre de Contacto de Emergencia *" 
+                                                class="form-control"
+                                                required
+                                            >
+                                        </div>
+                                    </div>
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-2 col-form-label">Telefono</label>
+                                        <div class="col-sm-10">
+                                            <input 
+                                                type="tel"
+                                                name="telefono_emergencia_per_nat"
+                                                id="telefono_emergencia_per_nat" 
+                                                placeholder="Telefono de Contacto de Emergencia *" 
                                                 class="form-control"
                                                 required
                                             >
