--- a/src/views/naturalInsureds.ejs
+++ b/src/views/naturalInsureds.ejs
@@ -142,7 +142,7 @@ $(document).ready(function(){
             {"data": "nombre_asegurado_per_nat"},
             {"data": "apellido_asegurado_per_nat"},
             {"data": "correo_asegurado_per_nat"},
-            {"data": "celular_emergencia_per_nat"},
+            {"data": "celular_per_nat"},
             {"data": "direccion_asegurado_per_nat"},
             {
                 "data": "",
