--- a/src/views/editExecutive.ejs
+++ b/src/views/editExecutive.ejs
@@ -90,7 +90,7 @@
                                     <div class="form-group row"><label class="col-sm-2 col-form-label">Celular</label>
                                         <div class="col-sm-10">
                                             <input 
-                                                type="text"
+                                                type="tel"
                                                 name="celular_ejecutivo"
                                                 id="celular_ejecutivo" 
                                                 value="<%= executive.celular_ejecutivo %>" 
