--- a/src/views/editNaturalInsured.ejs
+++ b/src/views/editNaturalInsured.ejs
@@ -84,7 +84,7 @@
                                     <div class="form-group row"><label class="col-sm-2 col-form-label">Telefono</label>
                                         <div class="col-sm-10">
                                             <input 
-                                                type="text"
+                                                type="tel"
                                                 name="telefono_asegurado_per_nat"
                                                 id="telefono_asegurado_per_nat" 
                                                 value="<%= naturalInsured.telefono_asegurado_per_nat %>" 
@@ -92,13 +92,7 @@
                                             >
                                         </div>
                                     </div>
-                                    </br>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-6">
-                            <div class="ibox">
-                                <div class="form-control">
+                                    <div class="hr-line-dashed"></div>
                                     <div class="form-group row"><label class="col-sm-2 col-form-label">Email</label>
                                         <div class="col-sm-10">
                                             <input 
@@ -111,14 +105,46 @@
                                             >
                                         </div>
                                     </div>
-                                    <div class="hr-line-dashed"></div>
+                                    </br>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="ibox">
+                                <div class="form-control">
                                     <div class="form-group row"><label class="col-sm-2 col-form-label">Celular</label>
                                         <div class="col-sm-10">
                                             <input 
+                                                type="tel"
+                                                name="celular_per_nat"
+                                                id="celular_per_nat" 
+                                                value="<%= naturalInsured.celular_per_nat %>" 
+                                                class="form-control"
+                                                required
+                                            >
+                                        </div>
+                                    </div>
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-2 col-form-label">Nombre</label>
+                                        <div class="col-sm-10">
+                                            <input 
                                                 type="text"
-                                                name="celular_emergencia_per_nat"
-                                                id="celular_emergencia_per_nat" 
-                                                value="<%= naturalInsured.celular_emergencia_per_nat %>" 
+                                                name="nombre_emergencia_per_nat"
+                                                id="nombre_emergencia_per_nat" 
+                                                value="<%= naturalInsured.nombre_emergencia_per_nat %>" 
+                                                class="form-control"
+                                                required
+                                            >
+                                        </div>
+                                    </div>
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-2 col-form-label">Telefono</label>
+                                        <div class="col-sm-10">
+                                            <input 
+                                                type="tel"
+                                                name="telefono_emergencia_per_nat"
+                                                id="telefono_emergencia_per_nat" 
+                                                value="<%= naturalInsured.telefono_emergencia_per_nat %>"
                                                 class="form-control"
                                                 required
                                             >
