--- a/src/views/editOwnAgent.ejs
+++ b/src/views/editOwnAgent.ejs
@@ -90,7 +90,7 @@
                                     <div class="form-group row"><label class="col-sm-2 col-form-label">Celular</label>
                                         <div class="col-sm-10">
                                             <input 
-                                                type="text"
+                                                type="tel"
                                                 name="celular_agente_propio"
                                                 id="celular_agente_propio" 
                                                 value="<%= ownAgent.celular_agente_propio %>" 
