--- a/src/views/editUser.ejs
+++ b/src/views/editUser.ejs
@@ -149,7 +149,7 @@
                                     <div class="form-group row"><label class="col-sm-2 col-form-label">Teléfono</label>
                                         <div class="col-sm-10">
                                             <input 
-                                                type="text"
+                                                type="tel"
                                                 name="telefono_usuario"
                                                 id="telefono_usuario" 
                                                 value="<%= user.telefono_usuario %>" 
