--- a/src/views/ownAgentForm.ejs
+++ b/src/views/ownAgentForm.ejs
@@ -75,7 +75,7 @@
                                     <div class="form-group row"><label class="col-sm-2 col-form-label">Celular</label>
                                         <div class="col-sm-10">
                                             <input 
-                                                type="text"
+                                                type="tel"
                                                 name="celular_agente_propio"
                                                 id="celular_agente_propio" 
                                                 placeholder="Celular de Agente Propio*" 
