--- a/src/views/userForm.ejs
+++ b/src/views/userForm.ejs
@@ -135,7 +135,7 @@
                                     <div class="form-group row"><label class="col-sm-2 col-form-label">Teléfono</label>
                                         <div class="col-sm-10">
                                             <input 
-                                                type="text"
+                                                type="tel"
                                                 name="telefono_usuario"
                                                 id="telefono_usuario" 
                                                 placeholder="Teléfono" 
